--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,28 +1,34 @@
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
-.wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+body {
+  font-family: 'Roboto',
+    sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+
+  h2 {
+    text-align: center;
+    font-size: 32px;
+    line-height: 42px;
+  }
 }
 
-.main {
-	flex: 1 0 auto;
-}
-.footer {
-	flex: 0 0 auto;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
+.container-fluid {
+  max-width: 1440px;
+  margin: 0 auto;
 
-
-
-
+}
